New structure, writing the 7th lecture from notes from last semester (still unfinished)

--- a/08gy_cpp/08gy_cpp.tex
+++ b/08gy_cpp/08gy_cpp.tex
@@ -104,126 +104,7 @@
 		8. óra.
 	\end{center}
 	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor  előadásán. (\today)
-	\section{Template.}
-	\begin{lstlisting}
-#include <iostream>
-
-template <typename T>
-class X
-{
-	void f()
-	{
-		T t;
-		t.foo();
-	}
-};
-class Y
-{
-	void bar() {}
-};
-int main()
-{
-	
-}
-	\end{lstlisting}
-	Ez a kód nagyon úgy tűnhet, hogy nem fog lefordulni, de mégis le fog. Ez azért van, mert a template osztályok (és függvények) gyakorlatilag sablonok, amiből mi létrehozhatunk egy konkrét osztályt, és mivel sose példányosítottuk, ez olyan fordítás után, mintha benne se lenne a kódban. Szintaktikus ellenőrzést végez a fordító, pl. zárójelek be vannak-e zárva, pontosvessző nem hiányzik-e stb., de azt, hogy van-e olyan \texttt{T} típus, ami rendelkezik \texttt{foo()} függvénnyel, nem nézi.
-\begin{lstlisting}
-#include <iostream>
-
-template <typename T>
-class X
-{
-	void f()
-	{
-		T t;
-		t.foo();
-	}
-};
-class Y
-{
-	void bar() {}
-};
-int main()
-{
-	X<Y> x;
-}
-\end{lstlisting}
-	Ekkor már azt várnánk hogy valóban nem fordul le, hogy \texttt{Y}-nak nincs \texttt{foo()} metódusa. Azonban lefordul, mivel az \texttt{f()} függvényt nem hívtuk meg, így nem is példányosult az osztályon belül.
-	\begin{lstlisting}
-int main()
-{
-	X<Y> x;
-	x.f();
-}
-	\end{lstlisting}
-	Itt már végre kapunk fordítási hibát, mert példányosul \texttt{f()}. Ez jól mutatja, hogy a template-ek lusták, és csak akkor példányosulnak, ha nagyon muszáj.
-	\medskip
-	
-	A template-eknek adhatunk meg alapértelmezett értéket.
-
-\begin{lstlisting}
-template <typename T = void> //alapertelmezett parameter
-class X
-{
-	void f()
-	{
-		T t;
-		t.foo();
-	}
-};
-class Y
-{
-	void bar() {}
-};
-int main()
-{
-	X<Y> x;
-	X<> x2;
-}
-\end{lstlisting}
-	Ilyenkor nem szükséges megadni template paramétert. Továbbá lehet olyan template osztályunk is, mely egy template-et vár.
-
-\begin{lstlisting}
-template <typename T>
-class X
-{
-	void f()
-	{
-		T t;
-		t.foo();
-	}
-};
-
-template <template <typename> class Templ>
-class Z
-{
-	Templ<int> t;
-};
-
-int main()
-{
-	X<Y> x;
-	Z<X> z;
-}
-\end{lstlisting}
-	Ez a \texttt{Templ} egy olyan template, aminek a template paramétere egy típus. Így \texttt{Z}-nek a template paramétere egy olyan template, aminek a template paramétere egy típus. Mivel \texttt{X} egy template, így megadható \texttt{Z}-nek template paraméterként.
-	\medskip
-	
-	A fenti példákban mindig egy default konstruktort használunk. Helyes lenne-e ez?
-\begin{lstlisting}
-int main()
-{
-	X<Y> x();
-	X<> y2();
-	Z<X> z();
-}
-\end{lstlisting}
-	A kód helyesen lefordul, de nem ugyanaz, mintha nem lenne ott a zárójel. Mivel a c++ nyelvtana nem egyértelmű, más kontextusban ugyanaz a kódrészlet mást jelenthet (egyik legegyszerűbb példa a \texttt{static} kulcsszó), így meg kellett alkotni egy olyan szabályt, miszerint amit deklarációként lehet értelmezni, azt deklarációként \textbf{kell} értelmezni. Itt ezek gyakorlatilag függvénydeklarációk lesznek: Az első esetben például egy olyan függvényt deklarálunk, melynek neve \texttt{x}, \texttt{X<Y>}-al tér vissza és nem vár paramétert. 
-	
-	Így ha default konstruktort szeretnék meghívni, semmilyen zárójelt nem szabad használni.
-	\begin{note}
-		C++11ben lehet gömbölyű helyett \{\} zárójelet alkalmazni, melynél ez a probléma nem fordulhat elő. pl: \texttt{X<Y> x\{\};}
-	\end{note}
+	\section{Header fájlra és fordításra egységre szétbontás}
 	Visszatérve a korábban írt láncolt listánkhoz, Mely meglehetősen jó már. Gyakorlatilag mindent tud, amit szeretnénk. Már csak nagyon apró dolgokat kéne javítani rajtuk: szét kéne szednünk őket header fájlra és fordítási egységre. 
 	
 	\medskip
