Class templates are a subsection now.

--- a/07gy_cpp/07gy_cpp.tex
+++ b/07gy_cpp/07gy_cpp.tex
@@ -196,7 +196,7 @@ int main()
 }
 	\end{lstlisting}
 	A fenti kód a 3. gyakorlat végén tett megjegyzésből lehet ismerős. Jól demonstrálja a template paraméter dedukciót.
-	\section{Osztály template-ek}
+	\subsection{Osztály template-ek}
 	Nem csak függvények, osztályok is lehentek template-ek melyen nagyon hasonlóan működnek.
 	\begin{lstlisting}
 #include <iostream>
